# naaviq-voice-providers

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_providers.py  001_initial_schema.py  002_create_models.py  002_promote_eol_date.py  003_add_compatible_models.py  003_create_voices.py  004_indexes_and_provider_metadata.py  004_provider_source_urls.py
naaviq/: config.py  db.py  main.py  models.py  schemas.py
naaviq/routers/: catalog.py  providers.py
naaviq/sync/: __init__.py  ai_parser.py  amazon_polly.py  amazon_transcribe.py  assemblyai.py  azure.py  base.py  cache.py  cambai.py  cartesia.py  deepgram.py  elevenlabs.py  fishaudio.py  gladia.py  google_cloud.py  groq.py  humeai.py  ibm.py  inworld.py  language.py  lmnt.py  lovoai.py  minimax.py  mistral.py  murf.py  neuphonic.py  openai.py  playht.py  registry.py  resemble.py  revai.py  rime.py  sarvam.py  smallestai.py  speechify.py  speechmatics.py  typecastai.py  unrealspeech.py  wellsaid.py
scripts/: promote.py  sync.py
smoke-outputs/: amazon_polly.txt  assemblyai.txt  azure.txt  cartesia.txt  deepgram.txt  elevenlabs.txt  google_cloud.txt  humeai.txt  inworld.txt  lmnt.txt  murf.txt  openai.txt  revai.txt  rime.txt  sarvam.txt  speechmatics.txt
tests/: test_language.py  test_providers.py
